# SIMBICON

./: .gitignore  README.md
src/: CMakeLists.txt
src/AppGUI/: AppGUI  Application.cpp  Application.h  CMakeLists.txt  ControllerEditor.cpp  ControllerEditor.h  CurveEditor.cpp  CurveEditor.h  GLWindow.cpp  GLWindow.h  Globals.cpp  Globals.h  InteractionInterface.cpp  InteractionInterface.h  InteractiveWorld.cpp  InteractiveWorld.h  Primitive.cpp  Primitive.h  SubGLWindow.cpp  SubGLWindow.h  UI.cpp  UI.h  main.cpp  tcltk.cpp  tcltk.h
src/AppGUI/init/: gui.tcl  input.conf
src/Core/: BalanceFeedback.cpp  BalanceFeedback.h  BaseControlFramework.cpp  BaseControlFramework.h  CMakeLists.txt  Character.cpp  Character.h  ConUtils.cpp  ConUtils.h  Controller.cpp  Controller.h  Core.vcproj  CustomSimBiConState.cpp  CustomSimBiConState.h  CustomSimBiController.cpp  CustomSimBiController.h  CustomSimTraj.cpp  CustomSimTraj.h  PoseController.cpp  PoseController.h  SimBiConFramework.cpp  SimBiConFramework.h  SimBiConState.cpp  SimBiConState.h  SimBiController.cpp  SimBiController.h  SimGlobals.cpp  SimGlobals.h  SimTraj.cpp  SimTraj.h  Trajectory.h
src/GLUtils/: CMakeLists.txt  GLMesh.h  GLTexture.cpp  GLUtils.cpp  OBJReader.cpp
src/MathLib/: CMakeLists.txt  Matrix.cpp  Point3d.cpp  Point3d.h  Quaternion.h  TransformationMatrix.cpp  Vector.cpp  Vector.h  Vector3d.h
src/Physics/: AbstractRBEngine.cpp  AbstractRBEngine.h  ArticulatedFigure.cpp  ArticulatedFigure.h  ArticulatedRigidBody.cpp  ArticulatedRigidBody.h  BallInSocketJoint.cpp  BallInSocketJoint.h  BoxCDP.cpp  BoxCDP.h  CMakeLists.txt  CapsuleCDP.cpp  CapsuleCDP.h  CollisionDetectionPrimitive.cpp  CollisionDetectionPrimitive.h  ContactPoint.h  HingeJoint.cpp  HingeJoint.h  Joint.cpp  Joint.h  ODEWorld.cpp  ODEWorld.h  PlaneCDP.cpp  PlaneCDP.h  PreCollisionQuery.cpp  PreCollisionQuery.h  RBProperties.cpp  RBProperties.h  RBState.cpp  RBState.h  RBUtils.cpp  RBUtils.h  RigidBody.cpp  RigidBody.h  SphereCDP.cpp  SphereCDP.h  UniversalJoint.cpp  UniversalJoint.h
src/Utils/: BMPIO.cpp  BMPIO.h  CMakeLists.txt  Image.cpp  Image.h  ImageIO.cpp  ImageIO.h  JsonUtil.cpp  JsonUtil.h  LogUtil.cpp  LogUtil.h  Timer.cpp  Timer.h  Utils.cpp  Utils.h
src/data/characters/: xudong_full.rbs  xudong_havetorso_notoe.rbs  xudong_notorso_havetoe.rbs  xudong_notorso_notoe.rbs
src/data/controllers/xudong/: backWalkState_custom.rs  backWalkState_full.rs  backWalkState_havetorso_notoe.rs  backWalkState_notorso_havetoe.rs  backWalkState_notorso_notoe.rs  backWalk_custom.sbc  backWalk_full.sbc  backWalk_havetorso_notoe.sbc  backWalk_notorso_havetoe.sbc  backWalk_notorso_notoe.sbc  catmull.py  fsm_custom.json  fsm_custom_2states.json  motion_sbc_converter.py  sbc_motion_parser.py  sbc_parser.py
src/gsl/: CMakeLists.txt
src/gsl/blas/: blas.c
src/include/: GLheaders.h
src/include/TCL/: X.h  Xlib.h  tcl.h
src/ode-0.9/: CMakeLists.txt
src/ode-0.9/OPCODE/: OPC_AABBCollider.h  OPC_AABBTree.h  OPC_BaseModel.h  OPC_BoxPruning.h  OPC_Collider.h  OPC_Common.h  OPC_HybridModel.h  OPC_LSSCollider.h  OPC_MeshInterface.h  OPC_Model.h  OPC_OBBCollider.h  OPC_OptimizedTree.h  OPC_Picking.h  OPC_PlanesCollider.h  OPC_RayCollider.h  OPC_Settings.h  OPC_SphereCollider.h  OPC_SweepAndPrune.h  OPC_TreeBuilders.h  OPC_TreeCollider.h  OPC_VolumeCollider.h  Opcode.h
src/ode-0.9/OPCODE/Ice/: IceAABB.h  IceAxes.h  IceBoundingSphere.h  IceContainer.h  IceFPU.h  IceHPoint.h  IceIndexedTriangle.h  IceLSS.h  IceMatrix3x3.h  IceMatrix4x4.h  IceMemoryMacros.h  IceOBB.h  IcePairs.h  IcePlane.h  IcePoint.h  IcePreprocessor.h  IceRandom.h  IceRay.h  IceRevisitedRadix.h  IceSegment.h  IceTriList.h  IceTriangle.h  IceTypes.h  IceUtils.h
src/ode-0.9/ode/src/: collision_quadtreespace.cpp
