set(
    ODE_PURE_SRC
    ./ode/src/util.cpp
./ode/src/collision_trimesh_ray.cpp
./ode/src/sphere.cpp
./ode/src/testing.cpp
./ode/src/collision_transform.cpp
./ode/src/memory.cpp
./ode/src/mat.cpp
# ./ode/src/stack.cpp
./ode/src/obstack.cpp
./ode/src/error.cpp
./ode/src/collision_trimesh_gimpact.cpp
./ode/src/collision_trimesh_trimesh.cpp
./ode/src/collision_trimesh_sphere.cpp
./ode/src/collision_trimesh_trimesh_new.cpp
./ode/src/ode.cpp
./ode/src/plane.cpp
./ode/src/timer.cpp
./ode/src/collision_trimesh_plane.cpp
./ode/src/matrix.cpp
./ode/src/collision_trimesh_box.cpp
./ode/src/export-dif.cpp
./ode/src/collision_trimesh_ccylinder.cpp
./ode/src/misc.cpp
./ode/src/quickstep.cpp
./ode/src/heightfield.cpp
./ode/src/array.cpp
./ode/src/collision_cylinder_plane.cpp
./ode/src/collision_space.cpp
./ode/src/step.cpp
./ode/src/collision_cylinder_trimesh.cpp
./ode/src/mass.cpp
./ode/src/lcp.cpp
./ode/src/cylinder.cpp
./ode/src/collision_cylinder_box.cpp
./ode/src/capsule.cpp
./ode/src/ray.cpp
./ode/src/collision_quadtreespace.cpp
./ode/src/collision_trimesh_distance.cpp
./ode/src/convex.cpp
./ode/src/collision_util.cpp
./ode/src/collision_trimesh_opcode.cpp
./ode/src/collision_kernel.cpp
./ode/src/box.cpp
./ode/src/collision_cylinder_sphere.cpp
./ode/src/stepfast.cpp
./ode/src/joint.cpp
./ode/src/odemath.cpp
./ode/src/rotation.cpp
)

set(
    OPC_ODE_SRC
    ./OPCODE/OPC_BoxPruning.cpp
./OPCODE/OPC_AABBCollider.cpp
./OPCODE/OPC_TreeBuilders.cpp
./OPCODE/OPC_OptimizedTree.cpp
./OPCODE/OPC_LSSCollider.cpp
./OPCODE/OPC_PlanesCollider.cpp
./OPCODE/Ice/IceMatrix4x4.cpp
./OPCODE/Ice/IceTriangle.cpp
./OPCODE/Ice/IcePoint.cpp
./OPCODE/Ice/IceUtils.cpp
./OPCODE/Ice/IcePlane.cpp
./OPCODE/Ice/IceRay.cpp
./OPCODE/Ice/IceIndexedTriangle.cpp
./OPCODE/Ice/IceAABB.cpp
./OPCODE/Ice/IceContainer.cpp
./OPCODE/Ice/IceSegment.cpp
./OPCODE/Ice/IceRevisitedRadix.cpp
./OPCODE/Ice/IceMatrix3x3.cpp
./OPCODE/Ice/IceOBB.cpp
./OPCODE/Ice/IceRandom.cpp
./OPCODE/Ice/IceHPoint.cpp
./OPCODE/OPC_AABBTree.cpp
./OPCODE/OPC_MeshInterface.cpp
./OPCODE/OPC_Picking.cpp
./OPCODE/OPC_Collider.cpp
./OPCODE/OPC_OBBCollider.cpp
./OPCODE/OPC_VolumeCollider.cpp
./OPCODE/OPC_SphereCollider.cpp
./OPCODE/OPC_TreeCollider.cpp
./OPCODE/OPC_RayCollider.cpp
./OPCODE/OPC_BaseModel.cpp
./OPCODE/OPC_SweepAndPrune.cpp
./OPCODE/Opcode.cpp
./OPCODE/OPC_Model.cpp
./OPCODE/OPC_HybridModel.cpp
)

set (
    GIMPACT_SRC
    ./GIMPACT/src/gim_trimesh_sphere_collision.cpp
./GIMPACT/src/gimpact.cpp
./GIMPACT/src/gim_trimesh_trimesh_collision.cpp
./GIMPACT/src/gim_trimesh_ray_collision.cpp
./GIMPACT/src/gim_math.cpp
./GIMPACT/src/gim_boxpruning.cpp
./GIMPACT/src/gim_tri_tri_overlap.cpp
./GIMPACT/src/gim_trimesh_capsule_collision.cpp
./GIMPACT/src/gim_contact.cpp
./GIMPACT/src/gim_trimesh.cpp
./GIMPACT/src/gim_memory.cpp
)

set(ODE_SRC
${ODE_PURE_SRC}
${GIMPACT_SRC}
${OPC_ODE_SRC}
)
include_directories("./include")
include_directories("./OPCODE")
add_library(ode ${ODE_SRC})